# desec_api

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: pr-checks.yml
src/: account.rs  domain.rs  lib.rs  rrset.rs  token.rs
tests/: api_test.rs  integration_test.rs
