[package]
name = "desec_api"
version = "0.4.1"
edition = "2021"
description = "Client library for the deSEC DNS API"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/desec_api"
repository = "https://github.com/andreas-bruckmeier/desec_api"
rust-version = "1.63.0"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
log = "0.4"
const_format = "0.2"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-shared-rt = "0.1"
ureq = "3.3"
uuid = { version = "1.23", features = ["v4"] }
